# aqbuildtools

./: .gitignore  Dockerfile  Makefile  README.md  Untitled.ipynb  conda_environment.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
aqbt/: __init__.py  __version__.py  cli.py  exceptions.py  genome.py  tools.py
aqbt/aquarium/: __init__.py  faker.py  genome_builder.py  linter.py  pydent_utils.py  registry.py  registry_crawler.py  resolve_sequences.py  serializer.py
aqbt/bioadapter/: __init__.py  conversion.py  registry.py
aqbt/biopython/: __init__.py
aqbt/build_request/: __init__.py  cell_value.py  exceptions.py  parser.py  schema.json  schema.json.py  schema.py  validate.py
aqbt/design/: build_request_parser.py
aqbt/sequence/: __init__.py
aqbt/utils/: __init__.py
examples/: DASiOutputToAquarium.ipynb  ParseBuildRequest.ipynb  PlanPostProcessing.ipynb  Stage1_SubmitDASi.ipynb  Stage2_DASiOutputToAquarium.ipynb  Stage4_PlanPostProcessing.ipynb  SubmitDASi.ipynb  Untitled.ipynb  Untitled1.ipynb  Upload_Fragment.csv  Upload_Plasmid.csv  Upload_Primer.csv  design.out.json  design.out.resolved.json  design_files.json  design_info_1.csv  design_info_2.csv  dirt.io.json  find_aq_primer_binding_sites.ipynb  pmod8_backbone.gb  syndna.fasta  token.pickle
examples/2020Designs/: Untitled.ipynb
examples/2021RedesignCampaign/: DARPA_strains_built_to_date.ipynb  DesignNORGateFragments.ipynb  mating.csv  (+32 more)
scripts/: export.sh
tests/: conftest.py  dna.fasta  dna.gb  test_biopython.py  test_config_loader.py  test_serializer.py  test_utils.py
(+157 files in other folders)
